--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -1,15 +1,18 @@
-# examples:
-#   periodic_cleanup:
-#     class: CleanSoftDeletedRecordsJob
-#     queue: background
-#     args: [ 1000, { batch_size: 500 } ]
-#     schedule: every hour
-#   periodic_cleanup_with_command:
-#     command: "SoftDeletedRecord.due.delete_all"
-#     priority: 2
-#     schedule: at 5am every day
-
-production:
+# YouTube 트렌드 데이터 자동 수집 (현재 비활성화)
+# development:
+#   collect_kr_trending:
+#     class: CollectTrendingDataJob
+#     queue: default
+#     args: [ "KR", "all" ]
+#     schedule: at 12:00am every day
+#     
+# production:
+#   collect_kr_trending:
+#     class: CollectTrendingDataJob
+#     queue: default
+#     args: [ "KR", "all" ]
+#     schedule: at 12:00am every day
+    
   clear_solid_queue_finished_jobs:
     command: "SolidQueue::Job.clear_finished_in_batches(sleep_between_batches: 0.3)"
     schedule: every hour at minute 12
