--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 buildCommand = "bundle install && bundle exec rails assets:precompile && bundle exec rails db:migrate"
 
 [deploy]
-startCommand = "bundle exec rails server -p $PORT -e $RAILS_ENV"
+startCommand = "bundle exec rails server -p $PORT -e $RAILS_ENV -b 0.0.0.0"
 healthcheckPath = "/health"
 healthcheckTimeout = 100
 restartPolicyType = "on-failure"
