--- a/railway.toml
+++ b/railway.toml
@@ -2,12 +2,4 @@
 buildCommand = "bundle install && bundle exec rails assets:precompile && bundle exec rails db:migrate"
 
 [deploy]
-startCommand = "bundle exec rails server -p $PORT -e $RAILS_ENV -b 0.0.0.0"
-healthcheckPath = "/health"
-healthcheckTimeout = 100
-restartPolicyType = "on-failure"
-
-[env]
-RAILS_ENV = "production"
-RAILS_SERVE_STATIC_FILES = "true"
-RAILS_LOG_TO_STDOUT = "true" 
+startCommand = "bundle exec rails server -p $PORT -e production -b 0.0.0.0" 
