--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,2 @@
 [build]
-buildCommand = "bundle install && bundle exec rails assets:precompile && bundle exec rails db:migrate"
-
-[deploy]
-startCommand = "bundle exec rails server -p $PORT -e production -b 0.0.0.0" 
+buildCommand = "bundle install && bundle exec rails db:migrate" 
